# whatsapp-mcp

./: .env.example  CLAUDE.md  DOCKER.md  Makefile  QUICKSTART.md  WEB_README.md  docker-compose.yml  logs.sh  start.sh  status.sh  stop.sh
whatsapp-bridge/: .dockerignore  Dockerfile  go.mod  go.sum  main.go
whatsapp-web-backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
whatsapp-web-backend/app/: __init__.py  claude_client.py  config.py  main.py  mcp_client.py  models.py
whatsapp-web-ui/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package.json
whatsapp-web-ui/app/: layout.tsx  page.tsx
whatsapp-web-ui/components/: ChatInterface.tsx  QRCodeScanner.tsx
whatsapp-web-ui/lib/: api.ts
