[project]
name = "whatsapp-web-backend"
version = "0.1.0"
description = "FastAPI backend for WhatsApp MCP web interface"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "anthropic>=0.42.0",
    "websockets>=14.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
